# kernel_lens

./: .gitignore  LICENSE  README.md  pyproject.toml
kernel_lens/: __init__.py
kernel_lens/backends/: builder.py  ort_gen.py  trt_gen.py
kernel_lens/compiler/: ast_analyzer.py  core.py  interaction.py  manifest.py  onnx_exporter.py  tracer.py
kernel_lens/runtime/: engine.py
kernel_lens/utils/: deployment.py  end_check.py
tests/: final.py  stress_test.py
